@@ -136,13 +136,6 @@ offending character, not the start of the expression.
   commit(s) to that PR's branch (rebase onto the remote head first if it moved),
   then update the PR title/body to cover everything the branch now contains.
   Re-running CI on that branch is the validation; do not open a new PR.
-- **Do not create worktrees or `pr-*` checkout branches when reviewing or
-  iterating on a PR.** All work belongs on `vi_api`. Even when a PR exists on a
-  separate branch (e.g. `pr-7128`), the canonical state to review and modify is
-  whatever is currently merged into `vi_api` — follow-up fixes routinely land
-  there directly, so `pr-*` branches lag and reviewing them in isolation gives
-  a misleading picture. If a `gh pr` command needs to fetch a PR's diff, fetch
-  the diff only (`gh pr diff`); do not check the branch out.
 
 ## Investigating failures
 
@@ -269,7 +262,7 @@ mvn -Dtest=ClassNameTest#methodName test
 ```bash
 # After building with web console:
 mkdir <root_directory>
-java -p core/target/questdb-<version>-SNAPSHOT.jar -m io.questdb/io.questdb.ServerMain -d <root_directory>
+java --add-exports=java.base/jdk.internal.vm=io.questdb -p core/target/questdb-<version>-SNAPSHOT.jar -m io.questdb/io.questdb.ServerMain -d <root_directory>
 # Web console at http://localhost:9000
 ```
 
